Fix HUPA build. Thanks to Felix Knecht for the patch. See HUPA-69
git-svn-id: https://svn.apache.org/repos/asf/james/hupa/trunk@1075219 13f79535-47bb-0310-9956-ffa450edef68